利用CPU分支预测提升代码性能示例1

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -54,6 +54,28 @@
 
 
 
+
+
+***
+
+# CPU缓存影响代码性能的示例
+
+[视频讲解](https://www.bilibili.com/video/BV1ds4y1P7Hc/)
+
+按行遍历：<a src="codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c" target="_blank">cache_iterate_by_row.c</a>
+
+按列遍历：<a src="codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c" target="_blank">cache_iterate_by_col.c</a>
+
+这两段代码中，按行遍历的效率比按列遍历的效率高，因为按行遍历利用了CPU Cache。
+
+
+***
+# 利用CPU分支预测提升代码性能示例1
+
+利用了CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithSort.java" target="_blank">BranchPrediction1WithSort.java</a>
+
+未利用CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java" target="_blank">BranchPrediction1WithoutSort.java</a>
+
 ***
 # 其他参考资料
 
