--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -68,13 +68,21 @@
 
 这两段代码中，按行遍历的效率比按列遍历的效率高，因为按行遍历利用了CPU Cache。
 
-
 ***
 # 利用CPU分支预测提升代码性能示例1
+
+[视频讲解](https://www.bilibili.com/video/BV1KX4y167TW/)
 
 利用了CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithSort.java" target="_blank">BranchPrediction1WithSort.java</a>
 
 未利用CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java" target="_blank">BranchPrediction1WithoutSort.java</a>
+
+***
+# 利用CPU分支预测提升代码性能示例2
+
+对CPU分支预测友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2SmallToLarge.java" target="_blank">BranchPrediction2SmallToLarge.java</a>
+
+对CPU分支预测不友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2LargeToSmall.java" target="_blank">BranchPrediction2LargeToSmall.java</a>
 
 ***
 # 其他参考资料
