--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -6,6 +6,9 @@
 - [不同存储设备在2010年时的造价](#%E4%B8%8D%E5%90%8C%E5%AD%98%E5%82%A8%E8%AE%BE%E5%A4%87%E5%9C%A82010%E5%B9%B4%E6%97%B6%E7%9A%84%E9%80%A0%E4%BB%B7)
 - [不同操作的延迟时间](#%E4%B8%8D%E5%90%8C%E6%93%8D%E4%BD%9C%E7%9A%84%E5%BB%B6%E8%BF%9F%E6%97%B6%E9%97%B4)
 - [CPU缓存架构](#cpu%E7%BC%93%E5%AD%98%E6%9E%B6%E6%9E%84)
+- [CPU缓存影响代码性能的示例](#cpu%E7%BC%93%E5%AD%98%E5%BD%B1%E5%93%8D%E4%BB%A3%E7%A0%81%E6%80%A7%E8%83%BD%E7%9A%84%E7%A4%BA%E4%BE%8B)
+- [利用CPU分支预测提升代码性能示例1](#%E5%88%A9%E7%94%A8cpu%E5%88%86%E6%94%AF%E9%A2%84%E6%B5%8B%E6%8F%90%E5%8D%87%E4%BB%A3%E7%A0%81%E6%80%A7%E8%83%BD%E7%A4%BA%E4%BE%8B1)
+- [利用CPU分支预测提升代码性能示例2](#%E5%88%A9%E7%94%A8cpu%E5%88%86%E6%94%AF%E9%A2%84%E6%B5%8B%E6%8F%90%E5%8D%87%E4%BB%A3%E7%A0%81%E6%80%A7%E8%83%BD%E7%A4%BA%E4%BE%8B2)
 - [其他参考资料](#%E5%85%B6%E4%BB%96%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
