视频无法显示，删除视频

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -15,8 +15,7 @@
 
 # CPU内部线路放大10次
 
-<video src="../assets/1.CPU_Memory_Disk/CPU内部线路放大10次.mp4" style="display:block;margin:auto;width:100%;"/>
-[来源：为什么说 CPU 是人造物的巅峰？](https://www.zhihu.com/question/378861322/answer/1100855720)
+[看这里：为什么说 CPU 是人造物的巅峰？](https://www.zhihu.com/question/378861322/answer/1100855720)
 
 
 
