CPU缓存，增加C编译器优化测试、Java测试代码

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -13,6 +13,7 @@
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
+***
 # CPU内部线路放大10次
 
 [看这里：为什么说 CPU 是人造物的巅峰？](https://www.zhihu.com/question/378861322/answer/1100855720)
@@ -56,8 +57,6 @@
 
 
 
-
-
 ***
 
 # CPU缓存影响代码性能的示例
@@ -70,8 +69,21 @@
 
 这两段代码中，按行遍历的效率比按列遍历的效率高，因为按行遍历利用了CPU Cache。
 
+Java版代码：
+
+按行遍历：<a src="codes/1.CPU_Memory_Disk/CPU/CacheIterateByRow.java" target="_blank">CacheIterateByRow.java</a>
+
+按列遍历：<a src="codes/1.CPU_Memory_Disk/CPU/CacheIterateByCol.java" target="_blank">CacheIterateByCol.java</a>
+
+
+补充文档：
+
+[Gcc Optimize Options 官方文档](https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html#Optimize-Options)
+
+
+
 ***
-# 利用CPU分支预测提升代码性能示例1
+# CPU分支预测影响代码性能示例1
 
 [视频讲解](https://www.bilibili.com/video/BV1KX4y167TW/)
 
@@ -80,7 +92,9 @@
 未利用CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java" target="_blank">BranchPrediction1WithoutSort.java</a>
 
 ***
-# 利用CPU分支预测提升代码性能示例2
+# CPU分支预测影响代码性能示例2
+
+[视频讲解](https://www.bilibili.com/video/BV1pc411n7Et/)
 
 对CPU分支预测友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2SmallToLarge.java" target="_blank">BranchPrediction2SmallToLarge.java</a>
 
