CPU分支预测影响代码性能示例3

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -61,7 +61,7 @@
 
 # CPU缓存影响代码性能的示例
 
-[视频讲解](https://www.bilibili.com/video/BV1ds4y1P7Hc/)
+[视频讲解](https://www.bilibili.com/video/BV1ds4y1P7Hc/)、[补充视频](https://www.bilibili.com/video/BV1UP411S7gD/)
 
 按行遍历：<a src="codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c" target="_blank">cache_iterate_by_row.c</a>
 
@@ -76,9 +76,7 @@ Java版代码：
 按列遍历：<a src="codes/1.CPU_Memory_Disk/CPU/CacheIterateByCol.java" target="_blank">CacheIterateByCol.java</a>
 
 
-补充文档：
-
-[Gcc Optimize Options 官方文档](https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html#Optimize-Options)
+补充文档：[Gcc Optimize Options 官方文档](https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html#Optimize-Options)
 
 
 
@@ -99,6 +97,34 @@ Java版代码：
 对CPU分支预测友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2SmallToLarge.java" target="_blank">BranchPrediction2SmallToLarge.java</a>
 
 对CPU分支预测不友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2LargeToSmall.java" target="_blank">BranchPrediction2LargeToSmall.java</a>
+
+***
+
+# CPU分支预测影响代码性能示例3
+
+利用 [JMH](https://github.com/openjdk/jmh) 做基准测试的代码（无法直接运行，因为依赖了jmh）：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3BenchmarkByJmh.java" target="_blank">BranchPrediction3BenchmarkByJmh.java</a>
+
+对于概率最大的情况，使用 if-else 语句，对于其他情况，使用 switch 语句：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfAndSwitch.java" target="_blank">BranchPrediction3IfAndSwitch.java</a>
+
+全部使用 if-else 语句，概率最大的情况放在最前面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse1MajorFirst.java" target="_blank">BranchPrediction3IfElse1MajorFirst.java</a>
+
+全部使用 if-else 语句，概率最大的情况放在中间判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse2MajorMiddle.java" target="_blank">BranchPrediction3IfElse2MajorMiddle.java</a>
+
+全部使用 if-else 语句，概率最大的情况放在最后面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse3MajorLast.java" target="_blank">BranchPrediction3IfElse3MajorLast.java</a>
+
+全部使用 switch 语句，概率最大的情况放在最前面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch1MajorFirst.java" target="_blank">BranchPrediction3Switch1MajorFirst.java</a>
+
+全部使用 switch 语句，概率最大的情况放在中间判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch2MajorMiddle.java" target="_blank">BranchPrediction3Switch2MajorMiddle.java</a>
+
+全部使用 switch 语句，概率最大的情况放在最后判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch3MajorLast.java" target="_blank">BranchPrediction3Switch3MajorLast.java</a>
+
+
+
+补充资料：
+
+[Dubbo 把 Switch 改成 If-Else-Switch 的提交](https://github.com/apache/dubbo/commit/7c216278a9d9d50e9ea2f1d86356295839ea2a23?diff=split)
+
+[阿里程序员工作小技巧：理解 CPU 分支预测，提高代码效率](https://mp.weixin.qq.com/s/i2EO_t_gkAraYYKXj9ddAA)
 
 ***
 # 其他参考资料
