完善CPU分支预测示例1，支持命令行参数

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -126,6 +126,8 @@ Java版代码：
 
 [阿里程序员工作小技巧：理解 CPU 分支预测，提高代码效率](https://mp.weixin.qq.com/s/i2EO_t_gkAraYYKXj9ddAA)
 
+[StackOverFlow上关于 if-else 和 switch 的讨论](https://stackoverflow.com/questions/767821/is-else-if-faster-than-switch-case)
+
 ***
 # 其他参考资料
 
