--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -129,6 +129,58 @@ Java版代码：
 [StackOverFlow上关于 if-else 和 switch 的讨论](https://stackoverflow.com/questions/767821/is-else-if-faster-than-switch-case)
 
 ***
+
+# 缓存冲突
+
+[缓存冲突代码示例：cache-conflicts（需要开启优化 `-Ofast` 才能看到明显的效果）](https://github.com/Kobzol/hardware-effects/tree/master/cache-conflicts)
+
+[YouTube视频：组相联映射：Set Associative Mapping](https://www.youtube.com/watch?v=KhAh6thw_TI)
+
+注：从作者的示例代码中未提炼出对日常写代码有帮助的写法。
+
+***
+
+# 数据依赖
+
+[数据依赖代码示例：data-dependency](https://github.com/Kobzol/hardware-effects/tree/master/data-dependency)
+
+注：作者的示例代码很刻意，未能从中提炼出对日常写代码有帮助的写法。
+
+***
+
+# 伪共享
+
+[维基百科：false sharing](https://en.wikipedia.org/wiki/False_sharing)
+
+假设变量 `a` 和变量 `b` 在同一个缓存行中，CPU核心1中的线程A在不断地修改变量 `a` ，而CPU核心2中的线程B在不断地修改变量 `b` ，而这个缓存行在两个核心中都存在，每次修改都需要同步到另一个核心中，表面上看， `a` 和 `b` 两个变量共享同一行缓存，但实际并没有，因此称为 `伪共享` 。
+
+以上只是简略的说明，在多线程中，实际CPU里面发生了什么，很难描述准确。参考[与程序员相关的CPU缓存知识 - 缓存一致性](https://coolshell.cn/articles/20793.html#%E7%BC%93%E5%AD%98%E7%9A%84%E4%B8%80%E8%87%B4%E6%80%A7)
+
+<center>
+	<img src="../assets/1.CPU_Memory_Disk/伪共享.png"/>
+	<br>
+	<a href="https://jenkov.com/tutorials/java-concurrency/false-sharing.html" target="_blank">图片来源</a>
+</center>
+
+Java伪共享示例：<a src="codes/1.CPU_Memory_Disk/CPU/FalseSharing.java" target="_blank">FalseSharing.java</a>
+
+[代码来自博客：Minute-Read: Understanding False Sharing in Java](https://www.linkedin.com/pulse/minute-read-understanding-false-sharing-java-keshavram-kuduwa)
+
+***
+
+# 没搞懂或未重现的一些知识点
+
+[4K混叠：4k-aliasing](https://github.com/Kobzol/hardware-effects/tree/master/4k-aliasing)
+
+[CPU内存间的带宽饱和：bandwidth-saturation](https://github.com/Kobzol/hardware-effects/tree/master/bandwidth-saturation)
+
+[缓存层级间的带宽：cache-hierarchy-bandwidth](https://github.com/Kobzol/hardware-effects/tree/master/cache-hierarchy-bandwidth)
+
+[被内存限制而不是被计算限制](https://github.com/Kobzol/hardware-effects/tree/master/cache-memory-bound)
+
+
+
+***
 # 其他参考资料
 
 [GitHub仓库：hardware-effects（硬件对程序的影响）](https://github.com/Kobzol/hardware-effects)
