--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -1,5 +1,5 @@
-<!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
 **Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
 - [CPU内部线路放大10次](#cpu%E5%86%85%E9%83%A8%E7%BA%BF%E8%B7%AF%E6%94%BE%E5%A4%A710%E6%AC%A1)
@@ -18,112 +18,117 @@
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
-***
+---
+
 # CPU内部线路放大10次
 
 [看这里：为什么说 CPU 是人造物的巅峰？](https://www.zhihu.com/question/378861322/answer/1100855720)
 
+---
 
-
-***
 # 不同存储设备在2010年时的造价
 
 <img src="../assets/1.CPU_Memory_Disk/不同存储设备在2010年时的造价.jpg"/>
 
 来源：[https://www.cs.utexas.edu/users/mckinley/352/lectures/21.pdf](https://www.cs.utexas.edu/users/mckinley/352/lectures/21.pdf)
 
-***
+---
+
 # 不同操作的延迟时间
 
 由于硬件发展速度很快，以下数据（大约基于2020年代的硬件）仅供参考：
 
-| 耗时（近似值）          | 典型操作                                                     |
-| ----------------------- | ------------------------------------------------------------ |
-| 0.1-1ns                 | CPU 访问寄存器；一个时钟周期；                               |
-| 1-10ns                  | CPU 访问 L1 级缓存；CPU 访问 L2 级缓存；                     |
-| 10-100ns                | CPU 访问 L3 级缓存；某些高效 CPU 访问内存（如 Apple M1 ）；  |
-| 100-1000ns（0.1-1µs）   | Linux 系统调用；MD5 计算文本的 Hash 值；                     |
-| 1-10µs                  | 进程上下文切换；复制 64KB 的内存；                           |
-| 10-100µs                | 处理一个 HTTP 请求；从内存中顺序读取 1M 数据；从 SSD 中读取 8K 数据； |
+| 耗时（近似值）          | 典型操作                                                                                             |
+| ----------------------- | ---------------------------------------------------------------------------------------------------- |
+| 0.1-1ns                 | CPU 访问寄存器；一个时钟周期；                                                                       |
+| 1-10ns                  | CPU 访问 L1 级缓存；CPU 访问 L2 级缓存；                                                             |
+| 10-100ns                | CPU 访问 L3 级缓存；某些高效 CPU 访问内存（如 Apple M1 ）；                                          |
+| 100-1000ns（0.1-1µs）  | Linux 系统调用；MD5 计算文本的 Hash 值；                                                             |
+| 1-10µs                 | 进程上下文切换；复制 64KB 的内存；                                                                   |
+| 10-100µs               | 处理一个 HTTP 请求；从内存中顺序读取 1M 数据；从 SSD 中读取 8K 数据；                                |
 | 100-1000us（0.1-1ms）   | 往 SSD 中写 8K 数据；相同区域内(intra-zone)一次网络的来回；Redis 在内网中的一次 Get 请求（约 1ms）； |
-| 1ms-10ms                | 不同区域内(inter-zone)一次网络的来回；HDD 的一次寻道时间；   |
-| 10ms-100ms              | 美国西部到东部的一次网络来回；美国东部到欧洲的一次网络来回；从内存中顺序读取 1G 数据； |
-| 100ms-1000ms（0.1s-1s） | 一次 TLS 握手；bcrypt 一个密码；从 SSD 中顺序读取 1G 数据；  |
-| 1s以上                  | 在相同云区域通过网络传输 1G 数据；                           |
+| 1ms-10ms                | 不同区域内(inter-zone)一次网络的来回；HDD 的一次寻道时间；                                           |
+| 10ms-100ms              | 美国西部到东部的一次网络来回；美国东部到欧洲的一次网络来回；从内存中顺序读取 1G 数据；               |
+| 100ms-1000ms（0.1s-1s） | 一次 TLS 握手；bcrypt 一个密码；从 SSD 中顺序读取 1G 数据；                                          |
+| 1s以上                  | 在相同云区域通过网络传输 1G 数据；                                                                   |
 
 数据来源：[Latency Numbers Programmer Should Know (for the 2020s)](https://www.youtube.com/watch?v=FqR5vESuKe0)
 
-***
+---
+
 # CPU缓存架构
 
 <img src="../assets/1.CPU_Memory_Disk/CPU缓存架构.png" style="display:block;margin:auto;width:100%;"/>
 
 [来源：与程序员相关的CPU缓存知识](https://coolshell.cn/articles/20793.html)
 
-
-
-***
+---
 
 # CPU缓存影响代码性能的示例
 
 [视频讲解](https://www.bilibili.com/video/BV1ds4y1P7Hc/)、[补充视频](https://www.bilibili.com/video/BV1UP411S7gD/)
 
-按行遍历：<a src="codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c" target="_blank">cache_iterate_by_row.c</a>
+按行遍历：[cache_iterate_by_row.c](../codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c)
 
-按列遍历：<a src="codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c" target="_blank">cache_iterate_by_col.c</a>
+按列遍历：[cache_iterate_by_col.c](../codes/1.CPU_Memory_Disk/CPU/cache_iterate_by_row.c)
 
 这两段代码中，按行遍历的效率比按列遍历的效率高，因为按行遍历利用了CPU Cache。
 
 Java版代码：
 
-按行遍历：<a src="codes/1.CPU_Memory_Disk/CPU/CacheIterateByRow.java" target="_blank">CacheIterateByRow.java</a>
+按行遍历：[CacheIterateByRow.java](../codes/1.CPU_Memory_Disk/CPU/CacheIterateByRow.java)
 
-按列遍历：<a src="codes/1.CPU_Memory_Disk/CPU/CacheIterateByCol.java" target="_blank">CacheIterateByCol.java</a>
-
+按列遍历：[CacheIterateByCol.java](../codes/1.CPU_Memory_Disk/CPU/CacheIterateByCol.java)
 
 补充文档：[Gcc Optimize Options 官方文档](https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html#Optimize-Options)
 
+---
 
-
-***
 # CPU分支预测影响代码性能示例1
 
 [视频讲解](https://www.bilibili.com/video/BV1KX4y167TW/)
 
-利用了CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithSort.java" target="_blank">BranchPrediction1WithSort.java</a>
+利用了CPU分支预测特性：[BranchPrediction1WithSort.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithSort.java)
 
-未利用CPU分支预测特性：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java" target="_blank">BranchPrediction1WithoutSort.java</a>
+未利用CPU分支预测特性：[BranchPrediction1WithoutSort.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java)
 
-***
+---
+
 # CPU分支预测影响代码性能示例2
 
 [视频讲解](https://www.bilibili.com/video/BV1pc411n7Et/)
 
-对CPU分支预测友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2SmallToLarge.java" target="_blank">BranchPrediction2SmallToLarge.java</a>
+对CPU分支预测友好的代码：[BranchPrediction2SmallToLarge.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction2SmallToLarge.java)
 
-对CPU分支预测不友好的代码：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction2LargeToSmall.java" target="_blank">BranchPrediction2LargeToSmall.java</a>
+对CPU分支预测不友好的代码：[BranchPrediction2LargeToSmall.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction2LargeToSmall.java)
 
-***
+---
 
 # CPU分支预测影响代码性能示例3
 
-利用 [JMH](https://github.com/openjdk/jmh) 做基准测试的代码（无法直接运行，因为依赖了jmh）：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3BenchmarkByJmh.java" target="_blank">BranchPrediction3BenchmarkByJmh.java</a>
+利用 [JMH](https://github.com/openjdk/jmh)
+做基准测试的代码（无法直接运行，因为依赖了jmh）：[BranchPrediction3BenchmarkByJmh.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3BenchmarkByJmh.java)
 
-对于概率最大的情况，使用 if-else 语句，对于其他情况，使用 switch 语句：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfAndSwitch.java" target="_blank">BranchPrediction3IfAndSwitch.java</a>
+对于概率最大的情况，使用 if-else 语句，对于其他情况，使用 switch
+语句：[BranchPrediction3IfAndSwitch.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfAndSwitch.java)
 
-全部使用 if-else 语句，概率最大的情况放在最前面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse1MajorFirst.java" target="_blank">BranchPrediction3IfElse1MajorFirst.java</a>
+全部使用 if-else
+语句，概率最大的情况放在最前面判断：[BranchPrediction3IfElse1MajorFirst.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse1MajorFirst.java)
 
-全部使用 if-else 语句，概率最大的情况放在中间判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse2MajorMiddle.java" target="_blank">BranchPrediction3IfElse2MajorMiddle.java</a>
+全部使用 if-else
+语句，概率最大的情况放在中间判断：[BranchPrediction3IfElse2MajorMiddle.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse2MajorMiddle.java)
 
-全部使用 if-else 语句，概率最大的情况放在最后面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse3MajorLast.java" target="_blank">BranchPrediction3IfElse3MajorLast.java</a>
+全部使用 if-else
+语句，概率最大的情况放在最后面判断：[BranchPrediction3IfElse3MajorLast.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3IfElse3MajorLast.java)
 
-全部使用 switch 语句，概率最大的情况放在最前面判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch1MajorFirst.java" target="_blank">BranchPrediction3Switch1MajorFirst.java</a>
+全部使用 switch
+语句，概率最大的情况放在最前面判断：[BranchPrediction3Switch1MajorFirst.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch1MajorFirst.java)
 
-全部使用 switch 语句，概率最大的情况放在中间判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch2MajorMiddle.java" target="_blank">BranchPrediction3Switch2MajorMiddle.java</a>
+全部使用 switch
+语句，概率最大的情况放在中间判断：[BranchPrediction3Switch2MajorMiddle.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch2MajorMiddle.java)
 
-全部使用 switch 语句，概率最大的情况放在最后判断：<a src="codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch3MajorLast.java" target="_blank">BranchPrediction3Switch3MajorLast.java</a>
-
-
+全部使用 switch
+语句，概率最大的情况放在最后判断：[BranchPrediction3Switch3MajorLast.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction3/BranchPrediction3Switch3MajorLast.java)
 
 补充资料：
 
@@ -133,7 +138,7 @@ Java版代码：
 
 [StackOverFlow上关于 if-else 和 switch 的讨论](https://stackoverflow.com/questions/767821/is-else-if-faster-than-switch-case)
 
-***
+---
 
 # 缓存冲突
 
@@ -143,7 +148,7 @@ Java版代码：
 
 注：从作者的示例代码中未提炼出对日常写代码有帮助的写法。
 
-***
+---
 
 # 数据依赖
 
@@ -151,27 +156,29 @@ Java版代码：
 
 注：作者的示例代码很刻意，未能从中提炼出对日常写代码有帮助的写法。
 
-***
+---
 
 # 伪共享
 
 [维基百科：false sharing](https://en.wikipedia.org/wiki/False_sharing)
 
-假设变量 `a` 和变量 `b` 在同一个缓存行中，CPU核心1中的线程A在不断地修改变量 `a` ，而CPU核心2中的线程B在不断地修改变量 `b` ，而这个缓存行在两个核心中都存在，每次修改都需要同步到另一个核心中，表面上看， `a` 和 `b` 两个变量共享同一行缓存，但实际并没有，因此称为 `伪共享` 。
+假设变量 `a` 和变量 `b` 在同一个缓存行中，CPU核心1中的线程A在不断地修改变量 `a` ，而CPU核心2中的线程B在不断地修改变量 `b`
+，而这个缓存行在两个核心中都存在，每次修改都需要同步到另一个核心中，表面上看， `a` 和 `b`
+两个变量共享同一行缓存，但实际并没有，因此称为 `伪共享` 。
 
 以上只是简略的说明，在多线程中，实际CPU里面发生了什么，很难描述准确。参考[与程序员相关的CPU缓存知识 - 缓存一致性](https://coolshell.cn/articles/20793.html#%E7%BC%93%E5%AD%98%E7%9A%84%E4%B8%80%E8%87%B4%E6%80%A7)
 
-<center>
+<div style="text-align: center;">
 	<img src="../assets/1.CPU_Memory_Disk/伪共享.png"/>
 	<br>
 	<a href="https://jenkov.com/tutorials/java-concurrency/false-sharing.html" target="_blank">图片来源</a>
-</center>
+</div>
 
-Java伪共享示例：<a src="codes/1.CPU_Memory_Disk/CPU/FalseSharing.java" target="_blank">FalseSharing.java</a>
+Java伪共享示例： [FalseSharing.java](../codes/1.CPU_Memory_Disk/CPU/FalseSharing.java)
 
 [代码来自博客：Minute-Read: Understanding False Sharing in Java](https://www.linkedin.com/pulse/minute-read-understanding-false-sharing-java-keshavram-kuduwa)
 
-***
+---
 
 # 没搞懂或未重现的一些知识点
 
@@ -183,9 +190,8 @@ Java伪共享示例：<a src="codes/1.CPU_Memory_Disk/CPU/FalseSharing.java" tar
 
 [被内存限制而不是被计算限制](https://github.com/Kobzol/hardware-effects/tree/master/cache-memory-bound)
 
+---
 
-
-***
 # 其他参考资料
 
 [GitHub仓库：hardware-effects（硬件对程序的影响）](https://github.com/Kobzol/hardware-effects)
@@ -197,4 +203,3 @@ Java伪共享示例：<a src="codes/1.CPU_Memory_Disk/CPU/FalseSharing.java" tar
 [维基百科：Memory bandwidth](https://en.wikipedia.org/wiki/Memory_bandwidth)
 
 [GitHub文章：Latency Numbers Every Programmer Should Know](https://colin-scott.github.io/personal_website/research/interactive_latency.html)
-
