冯诺伊曼之前的计算机和冯诺伊曼之后的计算机有什么区别

--- a/1.CPU_Memory_Disk/1.1.CPU.md
+++ b/1.CPU_Memory_Disk/1.1.CPU.md
@@ -18,13 +18,13 @@
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
----
+***
 
 # CPU内部线路放大10次
 
 [看这里：为什么说 CPU 是人造物的巅峰？](https://www.zhihu.com/question/378861322/answer/1100855720)
 
----
+***
 
 # 不同存储设备在2010年时的造价
 
@@ -32,7 +32,7 @@
 
 来源：[https://www.cs.utexas.edu/users/mckinley/352/lectures/21.pdf](https://www.cs.utexas.edu/users/mckinley/352/lectures/21.pdf)
 
----
+***
 
 # 不同操作的延迟时间
 
@@ -54,7 +54,7 @@
 
 数据来源：[Latency Numbers Programmer Should Know (for the 2020s)](https://www.youtube.com/watch?v=FqR5vESuKe0)
 
----
+***
 
 # CPU缓存架构
 
@@ -62,7 +62,7 @@
 
 [来源：与程序员相关的CPU缓存知识](https://coolshell.cn/articles/20793.html)
 
----
+***
 
 # CPU缓存影响代码性能的示例
 
@@ -82,7 +82,7 @@ Java版代码：
 
 补充文档：[Gcc Optimize Options 官方文档](https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html#Optimize-Options)
 
----
+***
 
 # CPU分支预测影响代码性能示例1
 
@@ -92,7 +92,7 @@ Java版代码：
 
 未利用CPU分支预测特性：[BranchPrediction1WithoutSort.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction1WithoutSort.java)
 
----
+***
 
 # CPU分支预测影响代码性能示例2
 
@@ -102,7 +102,7 @@ Java版代码：
 
 对CPU分支预测不友好的代码：[BranchPrediction2LargeToSmall.java](../codes/1.CPU_Memory_Disk/CPU/BranchPrediction2LargeToSmall.java)
 
----
+***
 
 # CPU分支预测影响代码性能示例3
 
@@ -138,17 +138,19 @@ Java版代码：
 
 [StackOverFlow上关于 if-else 和 switch 的讨论](https://stackoverflow.com/questions/767821/is-else-if-faster-than-switch-case)
 
----
+***
 
 # 缓存冲突
 
-[缓存冲突代码示例：cache-conflicts（需要开启优化 `-Ofast` 才能看到明显的效果）](https://github.com/Kobzol/hardware-effects/tree/master/cache-conflicts)
+缓存的查找是基于哈希表的，只要是哈希表，就难免会出现哈希冲突，从而影响程序的性能。
+
+[缓存冲突说明及代码示例：cache-conflicts（需要开启优化 `-Ofast` 才能看到明显的效果）](https://github.com/Kobzol/hardware-effects/tree/master/cache-conflicts)
 
 [YouTube视频：组相联映射：Set Associative Mapping](https://www.youtube.com/watch?v=KhAh6thw_TI)
 
 注：从作者的示例代码中未提炼出对日常写代码有帮助的写法。
 
----
+***
 
 # 数据依赖
 
@@ -156,7 +158,7 @@ Java版代码：
 
 注：作者的示例代码很刻意，未能从中提炼出对日常写代码有帮助的写法。
 
----
+***
 
 # 伪共享
 
@@ -174,11 +176,73 @@ Java版代码：
 	<a href="https://jenkov.com/tutorials/java-concurrency/false-sharing.html" target="_blank">图片来源</a>
 </div>
 
-Java伪共享示例： [FalseSharing.java](../codes/1.CPU_Memory_Disk/CPU/FalseSharing.java)
+Java伪共享示例： [普通版本：FalseSharingNormal.java](../codes/1.CPU_Memory_Disk/CPU/FalseSharingNormal.java)
+、[优化版本：FalseSharingOptimized.java](../codes/1.CPU_Memory_Disk/CPU/FalseSharingOptimized.java)
 
 [代码来自博客：Minute-Read: Understanding False Sharing in Java](https://www.linkedin.com/pulse/minute-read-understanding-false-sharing-java-keshavram-kuduwa)
 
----
+说明：该示例也是刻意为之的，没有什么实际作用。在网上没有找到现实业务里面出现的伪共享的例子。
+
+***
+
+# 把 0 从 CPU 写到内存，比写其他数字更快
+
+[参考：hardware-store-elimination](https://github.com/Kobzol/hardware-effects/tree/master/hardware-store-elimination)
+注：仅适用于部分CPU
+
+确实能看到效果，截取其中一段结果如下：
+（其中 `Size` 代表数组的大小， `Value` 代表数组中的值， `Bandwidth` 代表测得的从CPU写到内存的带宽，单位是 MB/s）
+
+```text
+Size: 32768,    Value: 0, Bandwidth: 50822.84
+Size: 32768,    Value: 1, Bandwidth: 46732.7
+
+Size: 262144,   Value: 0, Bandwidth: 35964.56
+Size: 262144,   Value: 1, Bandwidth: 32574.02
+
+Size: 1048576,  Value: 0, Bandwidth: 32766.14
+Size: 1048576,  Value: 1, Bandwidth: 28009.6
+
+Size: 4194304,  Value: 0, Bandwidth: 24662.10
+Size: 4194304,  Value: 1, Bandwidth: 22385.34
+
+Size: 33554432, Value: 0, Bandwidth: 11614.924
+Size: 33554432, Value: 1, Bandwidth: 9083.53
+```
+
+***
+
+# 字节对齐的访问比不对齐的访问更快
+
+[参考资料：misaligned-access](https://github.com/Kobzol/hardware-effects/tree/master/misaligned-access)
+
+示例代码中精心构造了字节不对齐情况，特意避开了编译器的优化，以方便看到明显的效果。
+
+代码运行的结果如下：
+
+```text
+Offset: 0,  Time: 188.6
+Offset: 1,  Time: 185.2
+Offset: 60, Time: 188.2
+Offset: 61, Time: 353.8
+Offset: 62, Time: 354.0
+Offset: 63, Time: 354.8
+Offset: 64, Time: 187.6
+```
+
+由于 1 个 int 是 4 个字节，一个缓存行是 64 个字节，当 Offset 的值是 61、62、63 的时候，在这个基础上再加 4，就会跨越两个缓存行，因此会比较慢。
+
+***
+
+# prefetching 预取
+
+1. cpu包含硬件预取器，当它们检测到缓存未命中并且程序正在可预测地访问内存时，它们会尝试将缓存行预取到缓存中。
+2. 一些编程语言中可以定义一些预取的级别，比如：同时缓存到L1、L2、L3；只缓存到L1、L2，不缓存到L3；只缓存到L1，不缓存到L2、L3等等。[参考](https://stackoverflow.com/questions/46521694/what-are-mm-prefetch-locality-hints/46525326#46525326)
+3. 顺序访问的时候，预取会很有用，但是随机访问的时候，预取的效果不好。一般来说，开发的时候除非刻意把代码写成随机访问，否则不会出现预取低效的问题。(下面的参考代码就属于刻意为之)
+
+[参考代码：prefetching](https://github.com/Kobzol/hardware-effects/tree/master/prefetching)
+
+***
 
 # 没搞懂或未重现的一些知识点
 
@@ -190,13 +254,15 @@ Java伪共享示例： [FalseSharing.java](../codes/1.CPU_Memory_Disk/CPU/FalseS
 
 [被内存限制而不是被计算限制](https://github.com/Kobzol/hardware-effects/tree/master/cache-memory-bound)
 
----
+[Floating point：Denormal numbers、Mixing SSE and AVX instructions](https://github.com/Kobzol/hardware-effects/tree/master/floating-point)
+
+***
 
 # 其他参考资料
 
 [GitHub仓库：hardware-effects（硬件对程序的影响）](https://github.com/Kobzol/hardware-effects)
 
-[油管视频：How a CPU Works](https://www.youtube.com/watch?v=cNN_tTXABUA)
+[YouTube视频：How a CPU Works](https://www.youtube.com/watch?v=cNN_tTXABUA)
 
 [维基百科：CPU cache](https://en.wikipedia.org/wiki/CPU_cache)
 
