--- a/1.CPU_Memory_Disk/1.2.内存.md
+++ b/1.CPU_Memory_Disk/1.2.内存.md
@@ -7,10 +7,21 @@
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
 
-
 ***
 
+# 内存分段
 
+我们知道，CPU运行一个程序，实质就是在顺序执行该程序的机器码。一个程序的机器码会被组织到同一个地方，这个地方就是 **代码段**。
+
+另外，程序在运行过程中必然要操作数据。这其中，对于有初值的变量，它的初始值会存放在程序的二进制文件中，而且，这些数据部分也会被装载到内存中，即程序的 **数据段**。数据段存放的是程序中已经初始化且不为0的全局变量和静态变量。
+
+对于未初始化的全局变量和静态变量，因为编译器知道它们的初始值都是0，因此便不需要再在程序的二进制映像中存放这么多0了，只需要记录他们的大小即可，这便是 **BSS段**。BSS段这个缩写名字是Block Started by Symbol，但很多人可能更喜欢把它记作Better Saved Space的缩写。
+
+<div style="text-align: center;">
+  <img src="https://static001.geekbang.org/resource/image/fc/c0/fcb6231d9cc3841643e4b84462e5b3c0.jpg?wh=2284x1980"/>
+  <br>
+  <a href="https://time.geekbang.org/column/article/431904" target="_blank">文字及图片来源</a>
+</div>
 
 # 参考
 
