--- a/0.Technolog_Background/0.Technolog_Background.md
+++ b/0.Technolog_Background/0.Technolog_Background.md
@@ -226,7 +226,7 @@
 6. 【软件】烧写 bootloader。这一步完成以后，把键盘插到电脑上，在设备管理器中就可以识别到了。
    烧写 bootloader 是指将一个预先写入的程序代码写入到芯片中，以便在每次复位时芯片先加载 bootloader，实现一些设置和功能，再开始执行代码。[来源](https://www.jianshu.com/p/2f274f8b3dab)
 7. 【软件】[制作键盘固件](https://docs.qmk.fm/#/newbs_getting_started)，可理解为写代码来规定键盘上的哪个键对应了电脑上的哪个键，这一步还只有代码。
-8. 【软件】烧写固件，把上一步中的代码烧写到芯片中，这这个时候键盘功能就完成了，就是长相还比。
+8. 【软件】烧写固件，把上一步中的代码烧写到芯片中，这个时候键盘功能就完成了，就是外观还很原始。
 9. 【硬件】用 3D 打印机打印键盘外壳。
 10. 【硬件】 组装为成品键盘。
 
